# McProxy

./: Cargo.toml  README.md  config.toml
.github/workflows/: cd.yml  ci.yml
src/: configuration.rs  logging.rs  main.rs
src/backends/: proxy_connection.rs
src/backends/minecraft/: client.rs  minecraft_proxy.rs  mod.rs  payload.rs
src/backends/minecraft/protocol/: mod.rs  parse_packet.rs
src/backends/minecraft/protocol/data_types/: string.rs
src/backends/minecraft/protocol/packets/: get_packet_length.rs  handshaking.rs
src/backends/tcp/: mod.rs  tcp_proxy.rs
src/minecraft_protocol/: mod.rs  parse_packet.rs  state.rs
src/minecraft_protocol/data_types/: mod.rs  string.rs  unsigned_short.rs  var_int.rs
src/minecraft_protocol/packets/: get_packet_length.rs  handshaking.rs  mod.rs
src/proxy_server/: minecraft_proxy.rs  mod.rs  proxy_connection.rs
src/proxy_server/minecraft/: client.rs  minecraft_proxy.rs  mod.rs  payload.rs
src/proxy_server/tcp/: mod.rs  tcp_proxy.rs
